# wgpu-example-01

./: Cargo.toml  Makefile  README.md
src/: main.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
