[package]
name = "wgpu-example-01"
version = "0.1.0"
authors = ["cab"]
edition = "2018"


[dependencies]
wgpu = { version = "0.8", features = [] }
# wgpu = { version = "0.8", features = ["cross"] }
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.7"
log = "0.4"
futures = "0.3"
winit = "0.24"